// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recommendations getLastUpdatedTimeForRecommendations returns last updated time for recommendations if succesful 1`] = `
Array [
  Object {
    "AdvertisingRecommendationsLastUpdated": 1969-07-21T02:56:03.000Z,
    "FulfillmentRecommendationsLastUpdated": 1969-07-21T02:56:03.000Z,
    "GlobalSellingRecommendationsLastUpdated": 1969-07-21T02:56:03.000Z,
    "InventoryRecommendationsLastUpdated": 1969-07-21T02:56:03.000Z,
    "PricingRecommendationsLastUpdated": 1969-07-21T02:56:03.000Z,
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`recommendations getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
